# neural-networks

./: .gitignore  ADAM_INTEGRATION_GUIDE.md  ADAM_QUICK_REFERENCE.md  CLAUDE.md  Cargo.toml  DENSE_REFACTORING_EXAMPLE.md  GPU-BIDIR-VERIFY.md  Jarvis  PLAN-cpu-verify.md  PLAN-gpu.md  PLAN.md  Text File.txt  alice.txt  best loss.txt  charset.txt  gg.txt  model.onnx  model_hier2  model_hier3  neural-networks  q-a.txt  seq_model_hier2  seq_model_hier3
.cargo/: config.toml
benches/: hierarchical_training.rs  lstm_training.rs
examples/: e_w_cosine.rs  gpu_bench.rs  gpu_fit.rs  gpu_memcheck.rs  gpu_occupancy.rs  gpu_prof.rs  gpu_soak.rs  gpu_win.rs  launch_cost.rs  mlstm_bench.rs  mlstm_chunk_bench.rs  mlstm_stage_prof.rs  nn2_bench.rs  parquet_demo.rs  seg_demo.rs  slstm_bench.rs  slstm_launch_bench.rs  slstm_roofline.rs  weight_stats.rs
logs/: 1024.csv  1024_1.csv  256.csv  256_128.csv  512_256.csv  batch4.csv  big_low_lr.csv  big_low_lr_b2.csv  big_test.csv  big_test2.csv  both_small.csv  chef.csv  chef2.csv  chef5.csv  chef7.csv  chef8.csv  fable11.csv  fable12.csv  fable13.csv  fable14.csv  fable15.csv  fable15_small.csv  fable16.csv  fable17.csv  fable5.csv  fable6.csv  fable7.csv  fable9.csv  fable_gpu.csv  feed.csv  fix.csv  fix_bi.csv  fix_large_ctx.csv  garbage.csv  garbage2.csv  garbage_no.csv  garbage_slstm.csv  giant.csv  gou.csv  gpu2.csv  (+62 more)
logs_arch/: batch4.csv  big_boy.csv  char_same_word.csv  fable10.csv  fable11 copy.csv  fable11.csv  fable13.csv  fable15.csv  fable15_small.csv  fable15_small_nd.csv  fable3.csv  fable4.csv  fable6.csv  fable8.csv  fable_deep.csv  fable_head_deep.csv  fable_head_wide.csv  fix_bi.csv  fix_shalow.csv  fix_small_95.csv  gpu1.csv  gpu3.csv  no_rms_3 copy.csv  no_rms_adamw.csv  no_rms_sgd.csv  no_state_inject.csv  (+20 more)
(+2433 files in other folders)
